# rustviking

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  concept.md  config.toml  config.toml.example
.github/workflows/: audit.yml  ci.yml  release.yml
benches/: agfs_bench.rs  bitmap_bench.rs  compute_bench.rs  kv_bench.rs  vector_bench.rs  vector_store_bench.rs
docs/: benchmark.md  cli-api-specification.md  cpu-embedding-analysis.md  development-plan.md  local-deployment-analysis.md  low-level-performance-analysis.md  performance-analysis.md  vector-storage-architecture.md
examples/: zhipu_e2e_test.rs
src/: error.rs  lib.rs  main.rs
src/agfs/: filesystem.rs  metadata.rs  mod.rs  mountable.rs  setup.rs  viking_uri.rs
src/cli/: bench_commands.rs  commands.rs  fs_commands.rs  index_commands.rs  mod.rs  store_commands.rs  viking_commands.rs
src/compute/: distance.rs  mod.rs  normalize.rs  simd.rs
src/config/: loader.rs  mod.rs
src/embedding/: mock.rs  mod.rs  openai.rs  traits.rs  types.rs
src/index/: bitmap.rs  hnsw.rs  hnsw_persist.rs  ivf_persist.rs  ivf_pq.rs  layered.rs  mod.rs  vector.rs
src/plugins/: localfs.rs  memory.rs  mod.rs
src/storage/: config.rs  kv.rs  mod.rs  rocks_kv.rs
tests/: agfs_test.rs  cli_test.rs  concurrency_test.rs  config_test.rs  embedding_test.rs  error_handling_test.rs  index_test.rs  integration_tests.rs  kv_store_test.rs  kv_test.rs  openai_embedding_test.rs  plugin_registry_test.rs  rocks_vector_store_test.rs  simd_compute_test.rs  vector_store_test.rs  vector_sync_test.rs  vikingfs_test.rs
(+10 files in other folders)
